--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,13 +1,14 @@
 server:
   port: 8080
+
+spring:
   profiles:
     active: dev
 
-spring:
   datasource:
-    url: jdbc:postgresql://postgres-service:5432/billingdb
-    username: billing_user
-    password: psw123456
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://postgres-service:5432/billingdb}
+    username: ${SPRING_DATASOURCE_USERNAME:billing_user}
+    password: ${SPRING_DATASOURCE_PASSWORD:psw123456}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -18,7 +19,10 @@ spring:
 
 oracle:
   datasource:
-    url: jdbc:oracle:thin:@oracle-service:1521/XEPDB1
-    username: billing
-    password: pws654321
+    url: ${ORACLE_DATASOURCE_URL:jdbc:oracle:thin:@oracle-service:1521/XEPDB1}
+    username: ${ORACLE_DATASOURCE_USERNAME:billing}
+    password: ${ORACLE_DATASOURCE_PASSWORD:pws654321}
     driver-class-name: oracle.jdbc.OracleDriver
+
+tax-service:
+  base-url: ${TAX_SERVICE_BASE_URL:http://python-service:8000}
